[package]
name = "lnwasi"
version = "0.0.4"
edition = "2021"
authors = ["Wongyu Lee <wq.lee@samsung.com>"]
description = "Netlink Library for Web Assembly"
license = "Apache-2.0"
repository = "https://github.com/21kyu/lnwasi"
documentation = "https://docs.rs/lnwasi"

[[bench]]
name = "netlink-bench"
harness = false
path = "benches/bench.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bincode = "1.3.3"
libc = "0.2.139"
nix = "0.26.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_bytes = "0.11.8"
ipnet = { version = "2.7.0", features = ["serde"] }

[dev-dependencies]
bencher = "0.1.5"
